@@ -142,5 +142,14 @@
                 <suite-xml-file>src/test/resources/complex.xml</suite-xml-file>
             </properties>
         </profile>
+        <profile>
+            <id>jdk16</id>
+            <activation>
+                <jdk>[16, 20]</jdk>
+            </activation>
+            <properties>
+                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
+            </properties>
+        </profile>
     </profiles>
 </project>
